# evdi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: details.md  index.md  quickstart.md
module/: Kbuild.in  Kconfig  Makefile  evdi_connector.c  evdi_cursor.c  evdi_cursor.h  evdi_debug.c  evdi_debug.h  evdi_drm.h  evdi_drm_drv.c  evdi_drm_drv.h  evdi_encoder.c  evdi_fb.c  evdi_gem.c  evdi_i2c.c  evdi_i2c.h  evdi_ioc32.c  evdi_modeset.c  evdi_painter.c  evdi_params.c  evdi_platform_dev.c  evdi_platform_dev.h  evdi_platform_drv.c  evdi_platform_drv.h  evdi_sysfs.c
